add dummy data folder

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "Text(0.5, 1.0, 'Count Plot of target variable')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -566,7 +566,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10dce59e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10ea0e048>"
       ]
      },
      "execution_count": 11,
@@ -880,16 +880,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x10cf6bf60>"
+       "<seaborn.axisgrid.PairGrid at 0x1a2e38af98>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -907,7 +907,7 @@
     }
    ],
    "source": [
-    "sns.pairplot(df.drop(['class_label'],axis=1), diag_kind=\"kde\")"
+    "sns.pairplot(df.drop(['class_label'],axis=1), diag_kind=\"kde\")\n"
    ]
   },
   {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
        "Text(0.5, 1.0, 'Box Plot')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -948,7 +948,7 @@
    ],
    "source": [
     "plt.figure(figsize=(10, 5))\n",
-    "sns.boxplot(data=df.drop(['class_label'],axis=1), orient=\"h\", palette=\"Set2\").set_title('Box Plot')"
+    "sns.boxplot(data=df.drop(['class_label'],axis=1), orient=\"h\", palette=\"Set2\").set_title('Box Plot')\n"
    ]
   },
   {
